Fix "is cancelled" checking in ContentVerifier hash retrieval code.

We call HashHelper::Cancel on IO during extension unload. If
the extension's hash retrieval through ContentHash was ongoing at
that point, ContentHash might not see the cancellation
if it already progressed enough on non-IO thread. This CL makes
sure we check for cancellation before passing the read hash value
on IO thread.

This fixes WebstoreInstallerTest.ReinstallDisabledExtension test's
flakiness locally.

Bug: 825470
Change-Id: Ib5b166cb14d3aee16b0cac9ae198a4141dc3563c
Reviewed-on: https://chromium-review.googlesource.com/981610
Commit-Queue: Istiaque Ahmed <lazyboy@chromium.org>
Reviewed-by: Devlin <rdevlin.cronin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#546207}
Former-commit-id: 9ad6ced2d17b993177f60b5451f196b4856a1ad8